--- a/index.html
+++ b/index.html
@@ -143,6 +143,66 @@
             <i class="bi bi-grid-fill px-3 py-1 border border-1"></i>
           </div>
         </div>
+
+        <section class="trending">
+          <h2 class="mb-2">Trending Now</h2>
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row g-1">
+                  <div class="col-2">
+                    <img src="./assets/img/media/media0.webp" class="d-block w-100" alt="Sherlock" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media1.jpg" class="d-block w-100" alt="American Factory" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media2.webp" class="d-block w-100" alt="The Good Place" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media3.webp" class="d-block w-100" alt="Genius of the Modern World" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media4.jpg" class="d-block w-100" alt="Cuba and the Cameraman" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media5.webp" class="d-block w-100" alt="The China Hustle" />
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row g-2">
+                  <div class="col-2">
+                    <img src="./assets/img/media/media6.jpg" class="d-block w-100" alt="The Social Dilemma" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media7.webp" class="d-block w-100" alt="AROG" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media8.webp" class="d-block w-100" alt="Yashi Bati" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media9.jpg" class="d-block w-100" alt="Connected" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media10.jpg" class="d-block w-100" alt="The Spy" />
+                  </div>
+                  <div class="col-2">
+                    <img src="./assets/img/media/media11.jpg" class="d-block w-100" alt="The College" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </section>
       </main>
       <footer></footer>
     </div>
