--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-dark">
     <div class="container-fluid text-white">
-      <header class="mx-10">
+      <header class="mx-3 mx-md mx-lg-10">
         <nav class="navbar navbar-expand-lg d-flex justify-content-between">
           <div class="d-flex">
             <div class="logo me-5">
@@ -116,7 +116,7 @@
           </div>
         </nav>
       </header>
-      <main class="mx-10">
+      <main class="mx-3 mx-md mx-lg-10">
         <div class="my-4 d-flex justify-content-between">
           <div class="d-flex align-items-center gap-5">
             <h1>TV Shows</h1>
@@ -813,7 +813,74 @@
           </div>
         </section>
       </main>
-      <footer></footer>
+      <footer class="pt-10">
+        <div class="container-fluid footer d-flex g-0 justify-content-between">
+          <div class="social">
+            <i class="bi bi-facebook text-secondary"></i><i class="bi bi-instagram text-secondary mx-2 mx-lg-4"></i
+            ><i class="bi bi-twitter text-secondary"></i><i class="bi bi-youtube text-secondary ms-2 ms-lg-4"></i>
+            <ul class="list-group px-0">
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Audio & Subtitles</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Media Center</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Privacy</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Contact Us</a>
+              </li>
+            </ul>
+            <a class="nav-link text-secondary border border-1 border-secondary mt-4 pt-1 pb-2 px-1" href="#"
+              >Service Code</a
+            >
+            <p class="text-secondary pt-4 text-nowrap">&copy; 1997-2019 Netflix, Inc. {i-0d00fcda2fdf9c0de}</p>
+          </div>
+
+          <div>
+            <ul class="list-group px-0">
+              <li class="pt-4">
+                <a class="nav-link text-secondary py-2 pt-3" href="#">Audio Description</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Investor Relations</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Legal Notices</a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <ul class="list-group px-0">
+              <li class="pt-4">
+                <a class="nav-link text-secondary py-2 pt-3" href="#">Help center</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Jobs</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Cookie Preferences</a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <ul class="list-group px-0">
+              <li class="pt-4">
+                <a class="nav-link text-secondary py-2 pt-3" href="#">Gift Cards</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Terms of Use</a>
+              </li>
+              <li>
+                <a class="nav-link text-secondary py-2" href="#">Corporate Information</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
