--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </button>
               <ul class="dropdown-menu dropdown-menu-end px-4 py-3">
                 <li class="text-white">
-                  <a class="nav-link" href="#"><i class="bi bi-person me-3"></i>Account</a>
+                  <a class="nav-link" href="./user.html"><i class="bi bi-person me-3"></i>Account</a>
                 </li>
                 <li class="text-white py-3">
                   <a class="nav-link" href="#"><i class="bi bi-gear me-3"></i>Impostazioni</a>
