--- a/user.html
+++ b/user.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Utente</title>
+    <title>User</title>
     <link href="./assets/dist/css/style_user.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   </head>
@@ -20,7 +20,7 @@
         <h1>Edit Profile</h1>
         <hr />
         <div class="d-flex">
-          <div class="me-5"><img src="./assets/img/avatar.png" alt="Avatar" class="img-fluid" /></div>
+          <div class="me-4"><img src="./assets/img/avatar.png" alt="Avatar" class="img-fluid" /></div>
           <div>
             <p class="name fs-3 bg-secondary px-3">Strive Student</p>
             <h3 class="fs-4">Language:</h3>
