Ho provato a fare i setting, non c'era tempo

--- a/settings.html
+++ b/settings.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   </head>
   <body>
-    <header class="bg-dark">
-      <header class="mx-3 mx-md mx-lg-10">
+    <div class="container-fluid bg-dark">
+      <header class="bg-dark mx-3 mx-md mx-lg-10">
         <nav class="navbar navbar-expand-lg d-flex justify-content-between">
           <div class="d-flex">
             <div class="logo me-5">
@@ -116,7 +116,36 @@
           </div>
         </nav>
       </header>
-    </header>
+    </div>
+
+    <main class="container w-75 py-7">
+      <h1 class="text-black fw-regular">Account</h1>
+      <hr />
+      <div class="container">
+        <div class="d-flex">
+          <div class="me-5">
+            <h2 class="fs-4 text-secondary">MEMBERSHIP & BILLING</h2>
+            <button type="button" class="btn bg-body-secondary rounded-0 px-7 py-2">Cancel membership</button>
+          </div>
+          <div class="container">
+            <div class="d-flex justify-content-between">
+              <div>
+                <p class="my-1 fw-bold">student@strive.school</p>
+                <p class="my-1 text-secondary">*********</p>
+                <p class="my-1 text-secondary">Phone: 321 044 1279</p>
+              </div>
+              <div>
+                <p class="my-1"><a href="#">Change account email</a></p>
+                <p class="my-1"><a href="#">Change password</a></p>
+                <p class="my-1"><a href="#">Change phone number</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex"></div>
+        </div>
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
