--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   <a class="nav-link" href="./user.html"><i class="bi bi-person me-3"></i>Account</a>
                 </li>
                 <li class="text-white py-3">
-                  <a class="nav-link" href="#"><i class="bi bi-gear me-3"></i>Impostazioni</a>
+                  <a class="nav-link" href="./settings.html"><i class="bi bi-gear me-3"></i>Impostazioni</a>
                 </li>
                 <li class="text-white">
                   <a class="nav-link" href="https://help.netflix.com/it" target="_blank"
